# kanari-oracle

./: .env  .gitignore  API_DOCS.md  CODE_REFACTORING.md  Cargo.toml  EXAMPLES.md  config.json  custom-config.json  demo.ps1  setup.bat
crates/btc/: Move.toml
crates/btc/sources/: btc.move
crates/btc/tests/: btc_tests.move
crates/frontend/: FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_START.md  README_COMPLETE.md
crates/frontend/src/app/: layout.tsx  page.tsx
crates/frontend/src/app/api-docs/: page.tsx
crates/frontend/src/app/dashboard/: page.tsx
crates/frontend/src/app/login/: page.tsx
crates/frontend/src/app/prices/: page.tsx
crates/frontend/src/app/profile/: page.tsx
crates/frontend/src/app/register/: page.tsx
crates/frontend/src/app/tokens/: page.tsx
crates/frontend/src/components/: Footer.tsx  Navbar.tsx
crates/frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  index.ts
crates/frontend/src/components/widgets/: ApiDocsWidget.tsx  HealthIndicator.tsx  PriceGrid.tsx  PriceWidget.tsx  StatsWidget.tsx  TokenManager.tsx  index.ts
crates/frontend/src/contexts/: AuthContext.tsx
crates/frontend/src/lib/: api.ts
crates/kanari-api/: Cargo.toml
crates/kanari-api/src/: api.rs  api_old.rs  auth.rs  database.rs  lib.rs  models.rs
crates/kanari-api/src/handlers/: health.rs  mod.rs  price.rs  user.rs
crates/kanari-oracle/: API_DOCS.md  Cargo.toml  EXAMPLES.md  README.md  SUMMARY.md
crates/kanari-oracle/src/: config.rs  errors.rs  lib.rs  models.rs  oracle.rs
crates/kanari-oracle/src/fetchers/: crypto.rs  mod.rs  stock.rs
crates/kanari-oracle/src/fetchers/crypto/: binance.rs  coinbase.rs  coingecko.rs  mod.rs
crates/kanari/src/: main.rs
kanari/: Cargo.toml
kanari-api/: Cargo.toml
kanari-oracle/: Cargo.toml  EXAMPLES.md
kanari-oracle-frontend/: package.json
kanari-oracle/src/: api.rs  main.rs  oracle.rs
kanari-oracle/src/fetchers/: stock.rs
src/: config.rs  errors.rs  main.rs  models.rs  oracle.rs
src/fetchers/: crypto.rs  mod.rs  stock.rs
