[workspace]
# Workspace configuration for the "kanari-sdk" project.
# Defines the overall structure and settings for the workspace.
# name = "kanari-sdk"
resolver = "2"                   # Use the version 2 feature resolver for more consistent feature resolution.



# Members List: Crates that are part of this workspace.
# These are the core components of the "kanari-sdk" project.
members = [
    "kanari-oracle",
    
]
