[workspace]
# Workspace configuration for the "kanari-sdk" project.
# Defines the overall structure and settings for the workspace.
# name = "kanari-sdk"
resolver = "2"                   # Use the version 2 feature resolver for more consistent feature resolution.



# Members List: Crates that are part of this workspace.
# These are the core components of the "kanari-sdk" project.
members = [
    "crates/kanari",
    "crates/kanari-api",
    "crates/kanari-oracle",
]


[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
# Web API dependencies
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
hyper = "1.7.0"
futures = "0.3.31"
headers = "0.3.6"



kanari = { path = "./crates/kanari" }
kanari-api = { path = "./crates/kanari-api" }
kanari-oracle = { path = "./crates/kanari-oracle" }
