[package]
name = "kanari-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
kanari-oracle = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4.42"
argon2 = "0.5.3"
rand = "0.8.5"
password-hash = "0.5.0"
dotenvy = "0.15"